[ASJ] Intro to lambda calculus

--- a/暗时间.md
+++ b/暗时间.md
@@ -383,4 +383,16 @@ bool Satan_algo(char* program) {
 
 #### Y Combinator
 
+##### lambda calculus
 
+- lambda 表达式的基本语法（BNF）：
+  - `<expr> ::= <identifier>`
+  - `<expr> ::= lambda <identifier-list>. <expr>`
+  - `<expr> ::= (<expr> <expr>)`
+
+- eg. `\ x y. x + y` （`\` 用来表示 lambda）表示两数相加
+  - 使用：`((\ x y. x + y) 2 3)`，把定义的加法函数运用在 2，3 上
+
+- 这个语言系统的简单至极的公理：
+  - Alpha 转换公理：比如 `lambda x y. x + y` 可转换为 `lambda a b. a + b`
+  - Beta 转换公理：例如 `(lambda x y. x + y) 2 3` 可转换为 `2 + 3`
