--- a/暗时间.md
+++ b/暗时间.md
@@ -396,3 +396,33 @@ bool Satan_algo(char* program) {
 - 这个语言系统的简单至极的公理：
   - Alpha 转换公理：比如 `lambda x y. x + y` 可转换为 `lambda a b. a + b`
   - Beta 转换公理：例如 `(lambda x y. x + y) 2 3` 可转换为 `2 + 3`
+
+##### 递归的迷思
+
+- 基于上面两个公理，我们没有办法用 lambda 表示递归函数，但是理想的想法如下：
+
+```
+lambda n. IF_Else n==0 1 n*<self>(n-1)
+```
+
+- 这里有一个地方没法解决，就是 `<self>` 该填入什么，我们尝试如下：
+
+```
+let F = lambda n. IF_Else n==0 1 n*F(n-1)
+```
+
+- 可是 `let F` 只是起到一个语法糖的作用，它所代表的 lambda 表达式还没有完全定义出来之前你是不可以使用 `F` 这个名字的
+- 继续尝试，将函数自身当作参数传入：
+
+```
+let P = lambda self n. IF_Else n==0 1 n*self(n-1)
+P(P, 3) // 计算 3 的阶乘，展开为 IF_Else 3==0 1 3*P(P, 3-1)
+```
+
+- 但是上面的问题在 `self(n-1)` 这里的函数调用只有一个参数，继续修改：
+
+```
+let P = lambda self n. IF_Else n==0 1 n*self(self, n-1)
+```
+
+
