[ASJ] No Moving Point

--- a/暗时间.md
+++ b/暗时间.md
@@ -425,4 +425,32 @@ P(P, 3) // 计算 3 的阶乘，展开为 IF_Else 3==0 1 3*P(P, 3-1)
 let P = lambda self n. IF_Else n==0 1 n*self(self, n-1)
 ```
 
+##### 不动点原理
 
+- 前面的函数看上去有些丑陋，我们可以创建一个真正的递归函数，这样 lambda 算子就不需要多余的参数了：
+
+```c
+power(n):
+  if(n==0) return 1;
+  return n*power(n-1);
+
+P(power, 3); // 展开为 IF_Else 3==0 1 3*power(3-1)
+```
+
+- `P(power)` 为函数的部分求值（partial evaluation）
+- 在 lambda 算子系统里面，如果给一个 lambda 函数的参数不足，则得到的就是一个新的 lambda 函数，这个新的 lambda 函数所接受的参数也就是你尚未给出的那些参数
+
+- 我们对 `P(power)` 套用 beta 公理，可得到 `IF_Else n==0 1 n*power(n-1)`，我们不妨给这个中间函数加上一个帽子
+
+```
+lambda n. IF_Else n==0 1 n*power(n-1)
+```
+
+- 可以看到上面的式子就是 `power` 本身的定义，因为
+
+```
+let power = lambda n. IF_Else n==0 1 n*power(n-1)
+P(power) = power
+```
+
+- 对于函数 `P` 来说 `power` 是这样一个 “点”：当把 `P` 用到 `power` 身上的时候，得到的结果仍然还是 `power`，也就是说，`power` 这个 “点” 在 `P` 的作用下是不动的
