[ASJ] No Moving Point

--- a/暗时间.md
+++ b/暗时间.md
@@ -455,3 +455,18 @@ P(power) = power
 
 - 对于函数 `P` 来说 `power` 是这样一个 “点”：当把 `P` 用到 `power` 身上的时候，得到的结果仍然还是 `power`，也就是说，`power` 这个 “点” 在 `P` 的作用下是不动的
 
+- 对任一伪递归 `F`，必存在一个理想的 `f` 满足 `F(f) = f`。我们假设有一个神奇的函数 `Y`，把它用在任何伪递归函数 `F` 上就能够得到真正的 `f`，也就是说 `Y(F) = f`，也就是
+
+```
+Y(F) = f = F(f) = F(Y(F))
+```
+
+- 所以 `Y` 具有性质 `Y(F) = F(Y(F))`
+
+- 我们如何实现一个类似 `power` 这样的函数，使得 `power = P(power)`，通过增加一个间接层：
+
+```
+let power_gen = lambda self. P(self(self))
+```
+
+- 可以通过 `power_gen(power_gen)` 的方式递归调用，展开其实是 `P(power_gen(power_gen))`，把这里的 `power_gen(power_gen)` 替换成 `power`，就是我们要的答案，因而对于给定的 `P`，只要构造出一个相应的 `power_gen`，即 `let power_gen = lambda self. P(self(self))`，然后 `power_gen(power_gen)` 就是我们要找的不动点
