[ASJ] Proof of Y combinator

--- a/暗时间.md
+++ b/暗时间.md
@@ -470,3 +470,30 @@ let power_gen = lambda self. P(self(self))
 ```
 
 - 可以通过 `power_gen(power_gen)` 的方式递归调用，展开其实是 `P(power_gen(power_gen))`，把这里的 `power_gen(power_gen)` 替换成 `power`，就是我们要的答案，因而对于给定的 `P`，只要构造出一个相应的 `power_gen`，即 `let power_gen = lambda self. P(self(self))`，然后 `power_gen(power_gen)` 就是我们要找的不动点
+
+##### 铸造 Y Combinator
+
+- 通过上面的推导，我们可以得到：
+
+```javascript
+let Y = lambda F. // Y 是一个 lambda 函数，它接受一个伪函数 F
+let f_gen = lambda self. F(self(self)) // 在内部生成 f_gen
+return f_gen(f_gen) // f_gen 应用到自身，f_gen(f_gen) 就是 F 的不动点（因为 f_gen(f_gen) = F(f_gen(f_gen))），而根据不动点性质，F 的不动点就是那个对应于 F 的真正的递归函数
+```
+
+- 我们可以通过展开来看看：
+
+```javascript
+let Pwr = lambda self n. If_Else n==0 1 n*self(n-1) // 定义阶乘函数的伪递归版本
+Y(Pwr) => let f_gen = lambda self. Pwr(self(self)) return f_gen(f_gen) // 把 Pwr 交给 Y
+f_gen(f_gen) => Pwr(f_gen(f_gen)) // 展开可得
+
+// Pwr 需要两个参数，Pwr(f_gen(f_gen)) 中只给出了一个，所以 Pwr(f_gen(f_gen)) 是一个单参函数
+Pwr(f_gen(f_gen)) => If_Else n==0 1 n*f_gen(f_gen)(n-1)
+
+// f_gen(f_gen) 又可以展开为 Pwr(f_gen(f_gen))
+If_Else n==0 1 n*f_gen(f_gen)(n-1) => If_Else n==0 1 n*Pwr(f_gen(f_gen))(n-1)
+
+// 不妨把 Pwr(f_gen(f_gen)) 替换成 f
+f => If_Else n==0 1 n*f(n-1)
+```
