[ASJ] Proof of Y combinator

--- a/暗时间.md
+++ b/暗时间.md
@@ -497,3 +497,21 @@ If_Else n==0 1 n*f_gen(f_gen)(n-1) => If_Else n==0 1 n*Pwr(f_gen(f_gen))(n-1)
 // 不妨把 Pwr(f_gen(f_gen)) 替换成 f
 f => If_Else n==0 1 n*f(n-1)
 ```
+
+#### 哥德尔的不完备性定理
+
+- 哥德尔的证明揭示出：任何足够强到蕴含皮亚诺算术系统（PA）的一致（即无矛盾）的系统都是不完备的，所谓不完备，就是说在系统内存在一个为真但无法在系统内推导出的命题
+- **说谎者悖论**：例如一个人声称 “我正在说谎” 或者 “我所说的皆为假”，矛盾：
+  - 如果他确实在说谎，那么他所说的就是真的，但如果他所说的就是真的，那么他就是在说谎
+  - 如果他不在说谎，则他说的话为假，但如果他在说谎，则他说的话就是真的
+- 命题 P 说 “P 不可在系统 T 内证明”
+  - 假设 T 可以证明出 P，而因为 P 说的就是 P 不可在系统 T 内证明，矛盾产生，说明假设错误
+- **排中律**：指在同一个思维过程中，两种思想不能同假，其中必有一真，即 “要么A要么非A”，是形式逻辑的基本规律之一
+- 哥德尔构造了这样一个公式：
+
+```
+N(n) is unprovable in T
+```
+
+- 我们用 `UnPr(X)` 来表达 `X is unprovable in T`，于是上面的公式就变成了 `UnPr(N(n))`，我们把这个公式简记为 `G(n)`
+- ...
