[ASJ] Proof of Y combinator

--- a/暗时间.md
+++ b/暗时间.md
@@ -515,3 +515,7 @@ N(n) is unprovable in T
 
 - 我们用 `UnPr(X)` 来表达 `X is unprovable in T`，于是上面的公式就变成了 `UnPr(N(n))`，我们把这个公式简记为 `G(n)`
 - ...
+
+- 哥德尔的不完备性定理证明了数学是一个未完结的学科，永远有需要我们一人的头脑从系统之外去用我们独有的直觉发现东西
+- 哥德尔的不完备性定理最深刻的地方就是它揭示了自指（或自引用，递归调用自身，等等）结构的普遍存在性：`G(n): UnPr( N(n) )`
+  - 这里的 `UnPr` 其实是一个形式化的谓词，可以泛化：`G(n): P( N(n) )`
