[ASJ] 康托尔对角线

--- a/暗时间.md
+++ b/暗时间.md
@@ -519,3 +519,9 @@ N(n) is unprovable in T
 - 哥德尔的不完备性定理证明了数学是一个未完结的学科，永远有需要我们一人的头脑从系统之外去用我们独有的直觉发现东西
 - 哥德尔的不完备性定理最深刻的地方就是它揭示了自指（或自引用，递归调用自身，等等）结构的普遍存在性：`G(n): UnPr( N(n) )`
   - 这里的 `UnPr` 其实是一个形式化的谓词，可以泛化：`G(n): P( N(n) )`
+  - 我们算出这个哥德尔公式的自然数编码 g，然后把它扔给 G：`G(g): P( G(g) )`，这就是 Y Combinator 的形式
+
+#### 大道至简 —— 康托尔的天才
+
+- 看上去最复杂的理论其实建立在一个最简单最纯粹的道理之上
+- 两个无穷集合 “大小” 一样当且仅当它们的元素之间能够一一对应，比如自然数集合与偶数集合就是一一对应的关系：`f(n)=2n`
