[ASJ] 康托尔对角线

--- a/暗时间.md
+++ b/暗时间.md
@@ -525,3 +525,50 @@ N(n) is unprovable in T
 
 - 看上去最复杂的理论其实建立在一个最简单最纯粹的道理之上
 - 两个无穷集合 “大小” 一样当且仅当它们的元素之间能够一一对应，比如自然数集合与偶数集合就是一一对应的关系：`f(n)=2n`
+- 实数集和自然数集无法构成一一对应，我们可以通过对角线方法证明，假设我们可以把实数集列出来：
+
+```
+1 a10.a11a12a13...
+2 a20.a21a22a23...
+3 a30.a31a32a33...
+4 ...
+5 ...
+```
+
+- 我们构造一个新的实数，它的第 i 位小数不等于 aii
+  - 也就是说，它跟上面列出的每一个实数都至少有一个对应的小数位不等
+  - 它不等于上面列出的所有实数
+  - 这与假设可以列出所有实数相矛盾，所以实数集是不可列的，即不可与自然数一一对应
+
+- 停机问题也可以通过对角线方法得出结论（M1，M2，M3 等是逐一列出的图灵机，上面一行是输入数据，N 表示不停机，数字表示有停机输出）：
+
+```
+   1 2 3 4 ...
+M1 N 1 N N ...
+M2 2 0 N 0 ...
+M3 0 1 2 0 ...
+M4 N 0 5 N ...
+...
+```
+
+- 假设存在一个图灵机 H，它能够判断任何程序在任何输入上能否停机，即 `H(Mi,j)` 能够给出 `Mi(j)` 是 N（不停）或数字（停）
+- 根据对角线方法，我们可以构造一个图灵机 P，其在 1 上的输出跟 `M1(1)` 不一样，在 2 上面的输出跟 `M2(2)` 不一样。。。总之，P 在 i 上的行为跟 `Mi(i)` 不一样，这样的 P 不难构建：
+
+```
+P(i):
+if (H(i, i) == 1) then // Mi(i) halts
+  return 1 + Mi(i)
+else // H(i, i) == 0 (Mi(i) doesn't halts)
+  return 0
+```
+
+- 因为 P 本身是一个图灵机，但是上面我们已经列出了所有的图灵机，所以必然存在一个 k，使得 Mk = P
+  - 两个图灵机相等当且仅当它们对于所有的输入都相等，也就是：
+
+  ```
+  Mk(k) = P(k) = 
+    1+Mk(k) if Mk(k) halts
+    0 if Mk(k) doesn't halt
+  ```
+
+  - 上面的式子矛盾，因此不存在这样的图灵机
