--- a/暗时间.md
+++ b/暗时间.md
@@ -572,3 +572,11 @@ else // H(i, i) == 0 (Mi(i) doesn't halts)
   ```
 
   - 上面的式子矛盾，因此不存在这样的图灵机
+
+#### 罗素悖论
+
+- 罗素悖论用数学的形式来描述就是：`R = {X: X 不属于 X}`
+  - 当初康托尔在思考无穷集合的时候发现可以称 “一切集合的集合”，这样一个集合由于它本身也是一个集合，所以它就属于它自身
+  - 如果 R 属于 R，根据 R 的定义，R 就不应该属于 R
+  - 如果 R 不属于 R，则再次根据 R 的定义，R 就应该属于 R
+- 罗素悖论也可以使用对角线方法证明
