--- a/暗时间.md
+++ b/暗时间.md
@@ -580,3 +580,12 @@ else // H(i, i) == 0 (Mi(i) doesn't halts)
   - 如果 R 属于 R，根据 R 的定义，R 就不应该属于 R
   - 如果 R 不属于 R，则再次根据 R 的定义，R 就应该属于 R
 - 罗素悖论也可以使用对角线方法证明
+
+### 数学之美番外篇：快排为什么那样快
+
+- 猜数字游戏：二分法最优 —— 答案的任何一个分支都是等概率的
+- 称球游戏：12 个小球，其中有一个是坏球。有一架天平。需要你用最少的称次数来确定哪个小球是坏的并且它到底是轻还是重
+  - 12 个小球两两配对上天平称，有 24 种情况需要称量
+  - 天平的输出有 3 种结果：平衡、左倾、右倾
+  - 这相当于我们的问题有 3 个答案，可以将所有的可能性切成三份
+  - 一次称量就可以将答案的可能性缩减为原来的 1/3，三次就能缩减为 1/27，理论上是完全可以三次称出来的
