--- a/暗时间.md
+++ b/暗时间.md
@@ -589,3 +589,7 @@ else // H(i, i) == 0 (Mi(i) doesn't halts)
   - 天平的输出有 3 种结果：平衡、左倾、右倾
   - 这相当于我们的问题有 3 个答案，可以将所有的可能性切成三份
   - 一次称量就可以将答案的可能性缩减为原来的 1/3，三次就能缩减为 1/27，理论上是完全可以三次称出来的
+  - 然后我们可以思考如何称，比如 6、6 称，3、3 称，或者是 2、2 称，最后发现 2、2 称可以把可能性缩减为原来的 1/3
+  - 这里的核心思想就是选择一种称法，使得 3 种结果的概率是均等的
+
+![](/assets/asj/ball_game_decision_branch.png)
