[ASJ] Why quick sort so quick?

--- a/暗时间.md
+++ b/暗时间.md
@@ -593,3 +593,11 @@ else // H(i, i) == 0 (Mi(i) doesn't halts)
   - 这里的核心思想就是选择一种称法，使得 3 种结果的概率是均等的
 
 ![](/assets/asj/ball_game_decision_branch.png)
+
+- 用上述看问题的视角看排序，排序的本质是：一组未排序的 `N` 个数字，它们一共有 `N!` 种重排，其中只有一种排列是满足题意的
+- 基于比较的排序的基本操作单元都是 “比较 a 和 b”，这个问题的答案只有 “是” 或 “否”
+  - 一个只有两种输出的问题最多只能将可能性空间切成两半
+  - 那么 `N` 个元素的 `N!` 种可能排列只需要 `log2(N!)` 近似于 `NlogN`
+
+- 将排序问题看成和猜数字一样，是通过问问题来缩小/排除（narrow down）结果的可能性区间
+  - “最好的问题” 就是那些能够均分所有可能性的问题，因为那样的话不管问题的答案如何，都能排除掉 `(k-1)/k`（`k` 为问题的答案有多少种输出，猜数字是 2，称球是 3）
