[ASJ] Intro to beyes

--- a/暗时间.md
+++ b/暗时间.md
@@ -601,3 +601,21 @@ else // H(i, i) == 0 (Mi(i) doesn't halts)
 
 - 将排序问题看成和猜数字一样，是通过问问题来缩小/排除（narrow down）结果的可能性区间
   - “最好的问题” 就是那些能够均分所有可能性的问题，因为那样的话不管问题的答案如何，都能排除掉 `(k-1)/k`（`k` 为问题的答案有多少种输出，猜数字是 2，称球是 3）
+
+### 数学之美番外篇：平凡而又神奇的贝叶斯方法
+
+- 逆概问题，例子
+  - 正向概率：假设袋子里面有 N 个白球，M 个黑球，你伸手进去摸一把，摸出黑球的概率是多大？
+  - 反向概率（逆概）：如果我们事先不知道袋子里面黑白球的比例，而是闭着眼睛摸出一个（或好几个）球，观察这些取出来的球的颜色之后，那么我们可以就此对袋子里面的黑白球的比例作出什么样的推测？
+
+- 我们需要做两件事：
+  1. 算出各种不同猜测的可能性大小（后验概率）
+  2. 算出最靠谱的猜测是什么（模型比较）
+
+- 贝叶斯的一般形式的表达式：
+
+```
+P(B|A) = P(A|B) * P(B) / (P(A|B) * P(B) + P(A|~B) * P(~B))
+P(B|A) = P(AB) / P(A)
+P(B|A) * P(A) = P(AB)
+```
