[ASJ] Example of beyes

--- a/暗时间.md
+++ b/暗时间.md
@@ -619,3 +619,25 @@ P(B|A) = P(A|B) * P(B) / (P(A|B) * P(B) + P(A|~B) * P(~B))
 P(B|A) = P(AB) / P(A)
 P(B|A) * P(A) = P(AB)
 ```
+
+- 拼写检查/纠正器，我们看到一个用户输入了一个不在字典中的单词，我们需要去猜测他究竟输入的是什么：
+
+```
+我们需要求：
+P(我们猜测他想输入的单词|他实际输入的单词)，以及使得这个概率最大的单词
+
+我们可以将我们的多个猜测记为 h1，h2 ...，它们都有一个有限且离散的猜测空间 H（单词的数量是有限的）
+将用户实际输入的单词记为 D，所以有 P(h1|D)，P(h2|D) ...，可以统一记为 P(h|D)
+
+运用贝叶斯公式可得：
+P(h|D) = P(h) * P(D|h) / P(D)
+
+因为对于所有猜测的 h1，h2，... P(D) 都是一样的，所以（在比较的时候）可以忽略这个常数
+我们只需要知道 P(h|D) 正比于 P(h) * P(D|h)
+
+这里的 P(h) 为 “这个猜测本身独立的可能性大小（先验概率，Prior）” —— h 本身在词汇表中被使用的可能性（频繁程度）大小
+这里的 P(D|h) 为 “这个猜测生成我们观测到的数据的可能性大小（似然，Likelihood）” —— 想输入 h 却输入成 D 的大小
+
+剩下的事情就是把所有的概率计算出来，选出最大的就好
+
+```
