[ASJ] Example of beyes

--- a/暗时间.md
+++ b/暗时间.md
@@ -641,3 +641,30 @@ P(h|D) = P(h) * P(D|h) / P(D)
 剩下的事情就是把所有的概率计算出来，选出最大的就好
 
 ```
+
+- 观测数据总是会有各种各样的误差，过分去追求完美解释会落入所谓的数据过配（overfitting）的境地
+  - `P(D|h)` 大不代表你的 h（猜测）就是更好的 h，还要看 `P(h)` 是怎样的
+  - **奥卡姆剃刀精神**：如果两个理论具有相似的解释力度，优先选择那个更简单（平凡、常见）的
+  - 一个现实的模型往往只提取出几个与结果相关度很高，很重要的因素（cause）
+
+- 奥卡姆剃刀就是说 `P(h)` 较大的模型有较大的优势，而最大似然则是说最符合观测数据的（即 `P(D|h)` 最大的）最有优势，整个模型的比较就是这两方面的拉锯
+- 先验概率里面的 “先验” 并不是指先于一切经验，而是仅指先于我们 “当前” 给出的观测数据（最大似然）而已（eg. 抛硬币）
+
+- 例子：树后面有多少个箱子？
+
+![](/assets/asj/how_many_box_behind_tree.png)
+
+- 两种可能的解释：
+
+![](/assets/asj/how_many_box_behind_tree_2.png)
+
+- 我们会觉得第二种不太可能，用概率论的语言来说就是，猜测 h 不成立，因为 `P(D|h)` 太小
+
+- 自然语言二义性：
+  - The girl saw the boy with a telescope
+    - 如果是 The girl saw the-boy-with-a-telescope，我们会觉得男孩手里拿个东西，这个东西偏偏还是望远镜，小概率事件
+    - 而如果是 The girl saw with-a-telescope the boy 的话，行为和描述就完全解释的通了
+  - 参见《Psychology of Judgment and Decision Making》及《Rationality for Mortals》第 12 章
+    - 是两本书的第 12 章还是仅仅是后一本的，明显后者的可能性更高
+
+- 贝叶斯奥卡姆剃刀（Bayesian Occam's Razor）：这个剃刀工作在贝叶斯公式的似然（`P(D|h)`）上，而不是模型本身（`P(h)`）的先验概率上
