--- a/暗时间.md
+++ b/暗时间.md
@@ -668,3 +668,12 @@ P(h|D) = P(h) * P(D|h) / P(D)
     - 是两本书的第 12 章还是仅仅是后一本的，明显后者的可能性更高
 
 - 贝叶斯奥卡姆剃刀（Bayesian Occam's Razor）：这个剃刀工作在贝叶斯公式的似然（`P(D|h)`）上，而不是模型本身（`P(h)`）的先验概率上
+
+- 贝叶斯的应用：
+  - **中文分词**：令 X 为字串（句子），Y 为词串（一种特定的分词假设）。我们需要寻找使得 `P(Y|X)` 最大的 Y，即 `P(Y|X) <- P(Y) * P(X|Y)`，也就是 “这种分词方式（词串）的可能性” 乘以 “这个词串生成我们的句子的可能性”
+  - **统计机器翻译**：给定一个句子 e，它的可能的外文翻译 f 中哪个是最靠谱的，即我们需要计算 `P(f|e)`，也就是 `P(f|e) <- p(f) * P(e|f)`
+  - **贝叶斯图像识别（Analysis by Synthesis）**：首先是视觉系统提取图形的边角特征，然后使用这些特征自底向上地激活高层的抽象概念，然后使用一个自顶向下的验证来比较到底哪个概念最佳地解释了观察到的图像
+  - **EM 算法与基于模型的聚类**
+  - **最大似然与最小二乘**
+
+- 越是往表层去，世界就越是繁复多变。从机器学习的角度来说，特征（feature）就越多，成百上千维度都是可能的，特征一多，数据就不够用
