--- a/暗时间.md
+++ b/暗时间.md
@@ -677,3 +677,9 @@ P(h|D) = P(h) * P(D|h) / P(D)
   - **最大似然与最小二乘**
 
 - 越是往表层去，世界就越是繁复多变。从机器学习的角度来说，特征（feature）就越多，成百上千维度都是可能的，特征一多，数据就不够用
+
+## 层级贝叶斯模型
+
+![](/assets/asj/layer_beyes_model.png)
+
+- 普通的贝叶斯都是在同一个事物层次上的各个因素之间进行统计推理，而层级贝叶斯会将这些因素背后的因素（原因的原因，原因的原因的原因）囊括进来
