Hidden Markov Model

--- a/暗时间.md
+++ b/暗时间.md
@@ -683,3 +683,6 @@ P(h|D) = P(h) * P(D|h) / P(D)
 ![](/assets/asj/layer_beyes_model.png)
 
 - 普通的贝叶斯都是在同一个事物层次上的各个因素之间进行统计推理，而层级贝叶斯会将这些因素背后的因素（原因的原因，原因的原因的原因）囊括进来
+- 隐马可夫模型（HMM）就是一个简单的层级贝叶斯模型：
+
+![](/assets/asj/hmm.png)
