Hidden Markov Model

--- a/暗时间.md
+++ b/暗时间.md
@@ -686,3 +686,5 @@ P(h|D) = P(h) * P(D|h) / P(D)
 - 隐马可夫模型（HMM）就是一个简单的层级贝叶斯模型：
 
 ![](/assets/asj/hmm.png)
+
+- 隐马可夫模型用于解决类似 “根据接收到的信息来推测说话者想表达的意思” 这样的问题
