--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -8,3 +8,8 @@
 - 单靠理论上的了解，并不足以克服制造日常生活各种伤痛和烦恼的心理与生理习性，只有通过修持，将理论付诸实践才能真正转化
 - 科学家们对 “心” 的活动的研究愈精细，就愈接近佛法对 “心” 的理解—— “心” 是一种不断的活动，而不是一个明确的实体
 - 大脑就像交响乐团，由许多组的演奏者构成，通过共同合作而产生特定的结果，例如动作、想法、情绪、记忆和生理感受等
+- 神经元彼此联系时，会产生某种类似老朋友之间的连接；它们会养成彼此来回传达同类信息的习惯，就好像老朋友会强化彼此对人、事或经验的判断一样。这样的连接就是所谓 “心的习气” 的生物基础，类似我们对某类型的人、事物或地方的自动或直接反应
+- 只要单纯地观看每一个通过自心的念头、情绪和感官知觉，那个有限的自我幻相就会消融，取而代之的是一种比较平静、宽广、安详的觉知
+  - 如果我能觉察自己惯性的念头、感知分别和感官知觉，而不是被它们牵着走，那么它们对我的影响力就会逐渐削减
+- 这些受限、焦虑、恐惧等感受，只不过是神经元在饶舌而已；在本质上，这些感受都只是习性，而习性是能够断除的
+
