[HMIW] The basic of heart

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -12,4 +12,7 @@
 - 只要单纯地观看每一个通过自心的念头、情绪和感官知觉，那个有限的自我幻相就会消融，取而代之的是一种比较平静、宽广、安详的觉知
   - 如果我能觉察自己惯性的念头、感知分别和感官知觉，而不是被它们牵着走，那么它们对我的影响力就会逐渐削减
 - 这些受限、焦虑、恐惧等感受，只不过是神经元在饶舌而已；在本质上，这些感受都只是习性，而习性是能够断除的
-
+- 心的本质不会受我们的状态或是念头所影响，它一直都是平静的
+- 当你无法以言语形容一个强烈的体验时，那就是一种进步的征兆，这表示，至少你已经轻轻碰触到自心本性难以言喻的宽广境界的边缘了
+- 任何时候，将注意力安住在往来于心中的一切就是 **禅修**；以这样的方式安住，就是体验本然心
+- 禅修跟日常生活中思考、情绪和感受历程的唯一差异，就在于你是否运用了单纯、赤裸的觉性。当你让心如其本然地安住，不追逐任何念头，不被任何情绪或感官知觉带走，这时觉性就会显现
