[HMIW] Note of mindset

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -16,3 +16,10 @@
 - 当你无法以言语形容一个强烈的体验时，那就是一种进步的征兆，这表示，至少你已经轻轻碰触到自心本性难以言喻的宽广境界的边缘了
 - 任何时候，将注意力安住在往来于心中的一切就是 **禅修**；以这样的方式安住，就是体验本然心
 - 禅修跟日常生活中思考、情绪和感受历程的唯一差异，就在于你是否运用了单纯、赤裸的觉性。当你让心如其本然地安住，不追逐任何念头，不被任何情绪或感官知觉带走，这时觉性就会显现
+- 自心本性就是空性，空性是所有现象的本质，指的是能够让任何事物改变或消失的无限可能性
+  - 从概念的角度不可能理解空性，只有通过直接的体验才能真正认证空性
+  - 任何一种体验都是从空性的无限可能性中生起的显相
+- 虚空是一种无垠的开阔感，它本身并不是一种 “东西”(thing)，而是一种无边无际、不具特性的背景
+- 绝对真理是不能用语言、图像或是数学符号来表达的，我们只能通过体验来领悟绝对的境界
+- 很多时候我们看到的物体仅仅是大脑皮层构建出来的一个影像，而非绝对实相
+- 通过不断的修心训练可让大脑发展出新的神经元连接。这不仅能转化既有的感知，更可消除焦虑、无助感和痛苦等心理状态，进而迈向较持久的喜乐与平静状态
