[HMIW] Note for why we are unhappy

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -23,3 +23,34 @@
 - 绝对真理是不能用语言、图像或是数学符号来表达的，我们只能通过体验来领悟绝对的境界
 - 很多时候我们看到的物体仅仅是大脑皮层构建出来的一个影像，而非绝对实相
 - 通过不断的修心训练可让大脑发展出新的神经元连接。这不仅能转化既有的感知，更可消除焦虑、无助感和痛苦等心理状态，进而迈向较持久的喜乐与平静状态
+- 长期的禅修练习能够消融主体和客体（能者与所者）之间的人为区别，让领受外境者能够自由地决定自身体验的性质，也能自在地分辨什么是真实的，什么只是显相而已
+- 我们接收到的任何资讯的意义，主要取决于我们是在何种情境下看待它
+- 你之所以会赋予事物恒常性或独立存在性，是由于你在那样的情境中看待它。如果你能训练自己用不同观点来看待自己和周遭的世界，那么你的感知就会随之转变
+- 觉性不是 “被训练出来” 的，你唯一要做的就是去认出它，只要注意自己是 “觉知的” 就行了
+- 禅修的重点就是要放下你对禅修的所有期待，觉察自心时，你唯一要做的就是去认出自心原本具有的特质
+- 当 “自” 与 “他” 之间的区别开始逐渐褪去时，就会进而跟其他众生以及周遭世界产生一种较温和、流畅的认同感
+- 当你开始认出自己所领受的一切外在境相，只不过是短暂且因缘和合的事件显相时，这些事件就不会再压得你喘不过气来了，然后整个 “自” 与 “他”​（外界）二元对立的结构就会逐渐瓦解
+  - “相对真理” 是由谬误的观点所生起的各种经验，而这种谬误的观点则源于认为自己所感知的一切都是独立、不变的实体
+  - 你无须刻意地投入，只要以一种在梦中体验对境的方式来看待一切情境，就能尽情地体验这一切经历，如此，发生在眼前的种种经验，就会开始让你感到惊奇连连
+- 心是一切经验的本源，改变了心的方向，就可以改变所有经验的品质；当你转化自己的心之后，你所经历的一切也会跟着转化
+- 愈深信某事物是真实的，它就愈可能成为真实的经验
+- 对佛教徒来说，悲心不仅止于怜悯他人，悲心的藏文是 “宁洁”(nyingjay)，意指 “心全然地开放”​
+  - 在藏文中，所谓的 “悲心” 是一种与所有生物相连的自发感受。你的体验我感同身受，我的体会及感受你也有同感，你我之间并无差异
+- 我们愈是能够清楚看到事物的原貌，就愈乐意并且也更能够对其他众生敞开心胸
+- 人与人之间的大部分冲突都来自对彼此动机的误解
+- 一旦我们可以认出其他有情众生，诸如人、动物甚至昆虫等，其实也都跟我们一样，基本动机都是想要得到平静、避免受苦，那么，即使有人做了跟我们意愿相左的事、说了不中听的话，我们也能够了解到：​“哦，这个人（或这个众生）的出发点是如此这般，就像我一样，他们也想要快乐，也想要远离痛苦，这是他们的基本目的。他们并非真的想要为难我，他们只是在做自己认为该做的事而已。​”
+- 当悲心在我们心中生起时，就是我们已经学会看到自己其实是多么强壮且安全无虞
+- 当外在或物质发展的速度超前于内在知识的发展时，人们承受着强烈的心理矛盾冲击，却苦于没有解决烦恼的方法；而丰富的物质享受也相对地带来了各种外在的干扰源，使我们跟内在世界失去了联系
+- 如果想要快乐，就得学会去辨识并处理那些会引起冲动或性格惯性反应的制约因素
+- 3 种烦恼：
+  - **愚痴**：
+    - 就根本层面来看，愚痴将觉性基本的开放体验曲解为一种固有的二元对立—— “自” 与 “他”​
+    - 我们开始把他人和物质视为快乐或不快乐的可能来源，生活因而变成一种争斗拼搏，必须在他人捷足先登之前，抢先得到所需的一切以获得快乐
+  - **贪着**：
+    - 贪着在很多方面跟上瘾没两样，是对外物或经验的一种强迫性依赖，以便制造出一种 “完满” 的假相
+    - 贪着会随着日久月深而愈演愈烈，纵使得到了梦寐以求的人、事、物，但我们所经历的 “满足感” 是不会长久的
+  - **嗔念**：
+    - 每个强烈的贪念都会引发相对强度的恐惧，因为唯恐得不到所求，或害怕失去所得。以佛教的语言来说，这样的恐惧就被称为 “嗔念”​，它是一种抗拒，即拒绝接受相对真理的无常本质所导致的必然变化
+    - 嗔念有如一种自我应验。由于 “自身不够圆满，必须依赖外境才能获得快乐” 的观念，使得我们为求取快乐而做的所有努力注定要失败，而让 “自身不够圆满” 的看法成真
+- 我们愈熟悉如何检验自心，就愈了解如何解决自己的问题，也愈容易认出所经历的一切，无论是贪着、嗔恨、压力、焦虑、恐惧或渴望，都只是自心的造作罢了
+- 对那些投入大量心力踏实地探索自心宝藏的人而言，无论外在环境如何变化，他们自然而然就会发展出某种名望，赢得他人的尊敬和信任；他们随时随地的行为都会激起旁人的敬重、钦佩和信赖；他们在这世间的成就，无关乎个人野心或企图赢得他人的关注，也非来自拥有名车、豪宅或响亮的头衔，而是来自一种宽广、放松的安适。这也使得他们能够超越当时的个人状态，更深入地看清人间百态，同时维持着一种基本的喜乐
