[HMIW] The correct way for meditation

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -54,3 +54,8 @@
     - 嗔念有如一种自我应验。由于 “自身不够圆满，必须依赖外境才能获得快乐” 的观念，使得我们为求取快乐而做的所有努力注定要失败，而让 “自身不够圆满” 的看法成真
 - 我们愈熟悉如何检验自心，就愈了解如何解决自己的问题，也愈容易认出所经历的一切，无论是贪着、嗔恨、压力、焦虑、恐惧或渴望，都只是自心的造作罢了
 - 对那些投入大量心力踏实地探索自心宝藏的人而言，无论外在环境如何变化，他们自然而然就会发展出某种名望，赢得他人的尊敬和信任；他们随时随地的行为都会激起旁人的敬重、钦佩和信赖；他们在这世间的成就，无关乎个人野心或企图赢得他人的关注，也非来自拥有名车、豪宅或响亮的头衔，而是来自一种宽广、放松的安适。这也使得他们能够超越当时的个人状态，更深入地看清人间百态，同时维持着一种基本的喜乐
+
+## 安住心的方法
+
+- 最有效的禅修方法就是尽最大的努力，但不要过于期待结果
+- 禅修的真正重点是，无论“有”或“没有”生起任何状态，都要安住在纯然的觉性中；不论心头现起什么，只要保持开放与了知，然后放下。倘若没有任何念头生起，或者念头在你察觉之前就消失，那么就安住在自然的明性中即可
