[HMIW] The correct way for godwin meditation

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -59,3 +59,9 @@
 
 - 最有效的禅修方法就是尽最大的努力，但不要过于期待结果
 - 禅修的真正重点是，无论“有”或“没有”生起任何状态，都要安住在纯然的觉性中；不论心头现起什么，只要保持开放与了知，然后放下。倘若没有任何念头生起，或者念头在你察觉之前就消失，那么就安住在自然的明性中即可
+- 无所缘止禅修：
+  - 当我们在无所缘的境界中禅修时，我们实际上是将心安住于它本来的明性中，对任何念头和情绪的来去完全没有执着
+  - 无所缘的止禅修法有点像是看着开阔的虚空，而不是专注观察虚空中移动的银河系、天体和星球
+  - 无论心中有什么念头起落，别太在意它，也不要试图压抑它，只要看着它来来去去就好了
+- 初学禅修时最有效的方法，就是一天当中让心安住的次数要多，但每次安住的时间要短
+  - 这种短时间、多次的方法，就像古书中所说的 “涓滴挹注，终能满怀”​
