[HMIW] The correct way for thing meditation

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -59,9 +59,28 @@
 
 - 最有效的禅修方法就是尽最大的努力，但不要过于期待结果
 - 禅修的真正重点是，无论“有”或“没有”生起任何状态，都要安住在纯然的觉性中；不论心头现起什么，只要保持开放与了知，然后放下。倘若没有任何念头生起，或者念头在你察觉之前就消失，那么就安住在自然的明性中即可
-- 无所缘止禅修：
+- **无所缘止禅修**：
   - 当我们在无所缘的境界中禅修时，我们实际上是将心安住于它本来的明性中，对任何念头和情绪的来去完全没有执着
   - 无所缘的止禅修法有点像是看着开阔的虚空，而不是专注观察虚空中移动的银河系、天体和星球
   - 无论心中有什么念头起落，别太在意它，也不要试图压抑它，只要看着它来来去去就好了
 - 初学禅修时最有效的方法，就是一天当中让心安住的次数要多，但每次安住的时间要短
   - 这种短时间、多次的方法，就像古书中所说的 “涓滴挹注，终能满怀”​
+- “意识” 只是心的一种能力，让我们得以认出并辨别所看到、闻到、听到、尝到或触摸到的事物
+  - 意识就像是存在于有五个门的房子中的猴子，它会到每个门看看有没有好玩的东西，我们可以教导自己心中的那只疯猴子，通过刻意专注在不同感官上而平静下来
+  - 在学会如何跟自己的感官合作之后，你就必须开始应付这只疯猴子了，诀窍就是利用疯猴子制造出来的念头与情绪作为安定自心的助缘
+- **有所缘的禅修**：
+  - 跟我们的感官交朋友，并利用感官所接收到的信息作为安住自心的方法
+  - 佛经将这样的过程称为 “自我对治”​，也就是以散乱的根源本身作为远离散乱的对治法
+  - 将注意力放在缘境的感知上，忽略一些情绪化的思想，人会慢慢变得心平气和
+  - 在佛法名相中，这种源自直接身体接触的知觉，即称为“粗受”​（粗略的身体知觉）​。但愈深入注意自己感觉到的是什么，就会开始认出和触觉不一定有关的感受，这种感受则称为“细受”​（细微的身体知觉）​
+  - 刚开始练习这种止禅修的技巧时，我发现，每当我试图逃避某个知觉，这个知觉就会增强。但如果我只是看着它，那么，无论是多么不舒服的知觉，都会比较容易忍受
+    - 当我让自己纯然地观照某个知觉时，我全心投入当下所发生的一切情境之中，这让我看到自己的心有一部分在抗拒痛苦的感觉，另一部分则在催促自己要客观地看着它。看着同时间发生的两种矛盾、冲突时，我可以看到自己的心在处理 “逃避” 与 “接受” 的中间过程。结果，觉察心的活动竟然变得比 “逃避” 或 “接受” 还要有趣得多。看着自心在运作真是棒极了！我想，这就是我所能给予 “明性” 最实际的定义了：明性就是能够观照自心同时在多种层面上运作的一种能力
+  - 大部分人视痛苦为身体安乐的一大威胁。就一方面而言，当我们对这个威胁感到忧虑或被困扰时，痛苦几乎总是不断增强；另一方面而言，如果我们把痛苦或不适感视为禅修的对境，只透过单纯地看着心处理各种问题，就能够运用这些知觉来增强心的清明
+- 交替练习有所缘禅修和无所缘禅修是极有益处的。当你把心安住在某个对境时，你是将之视为与自己不同或有所区别的东西。但是，当你放下对境，只是安住自心于赤裸的觉性时，这种分别就消融了
+  - 就这样交替练习 “专注于对境”​，以及 “让心安住于赤裸的觉性”​，你就会开始体会神经科学家们所说的基本真理：我们所感知的一切，其实只是产生于心中的一种重建罢了。换句话说，所见之物和能见之心，两者是没有分别的
+- 以声音为助缘的禅修大利益之一，就是将会慢慢教导你超然地聆听各种声音，而不会对这些声音下定义，于是你开始学会听到声音，却不会对声音的内容起情绪化反应
+- 交通拥堵时刻的声音、景象、气味等，其实都可以成为禅修的丰富助缘
+  - 别只是一心一意要达到目的或是完成任务，要好好观察各个场景的种种知觉，这样的修持就是禅修的大好机会
+  - 如果你可以把注意力从忙着赶到哪里，转移到安住在你周遭的感觉上，那么，你大有可能会成为一个 “塞车大悉达“
+- **气味** 和 **味道** 也可以是禅修的助缘
+- 思考是心的自然活动，禅修不是去抑制你的念头，而是将心安住于心自然状态中的一种过程，并且在念头、情绪和感官知觉显现时，完全开放地接受它们、自然地觉察它们
