[HMIW] Tips for meditation

--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -68,6 +68,7 @@
 - “意识” 只是心的一种能力，让我们得以认出并辨别所看到、闻到、听到、尝到或触摸到的事物
   - 意识就像是存在于有五个门的房子中的猴子，它会到每个门看看有没有好玩的东西，我们可以教导自己心中的那只疯猴子，通过刻意专注在不同感官上而平静下来
   - 在学会如何跟自己的感官合作之后，你就必须开始应付这只疯猴子了，诀窍就是利用疯猴子制造出来的念头与情绪作为安定自心的助缘
+  - 如果你脑袋里的疯猴子在那里到处乱跳，那真是太棒了，就看着它兴风作浪吧！每一个跳跃、每一个念头、每一个干扰，就像是感官对境一样，都是禅修的助缘。当你发现自己在众多干扰中做困兽之斗时，你其实可以善用每一个干扰作为禅修的对境，如此，这些干扰就不再是干扰，反而成为你禅修的助缘了
 - **有所缘的禅修**：
   - 跟我们的感官交朋友，并利用感官所接收到的信息作为安住自心的方法
   - 佛经将这样的过程称为 “自我对治”​，也就是以散乱的根源本身作为远离散乱的对治法
@@ -84,3 +85,18 @@
   - 如果你可以把注意力从忙着赶到哪里，转移到安住在你周遭的感觉上，那么，你大有可能会成为一个 “塞车大悉达“
 - **气味** 和 **味道** 也可以是禅修的助缘
 - 思考是心的自然活动，禅修不是去抑制你的念头，而是将心安住于心自然状态中的一种过程，并且在念头、情绪和感官知觉显现时，完全开放地接受它们、自然地觉察它们
+- 看着念头的过程就是这样不断地循环：念头之后是空隙，空隙之后紧接着又是念头，然后又是个空隙
+- 禅修其实比一般人想象得容易太多了，无论你正在经历什么，只要能随时觉察正在发生的一切，这就是禅修！
+  - **将纯然的注意力集中在当下的体验上，就是禅修**
+  - 唯一会让你从禅修状态转换到其他状态的，就是当你试图控制或改变当下的体验时。不过，倘若你能觉察自己有控制当下经验的企图，这也是禅修
+  - 重点是，无论有什么念头、情绪或感官知觉生起，都要保持觉知。不管发生什么事，你都要记得保持觉知，那么这就是禅修
+- 面对负面情绪时，比较建设性的办法跟禅修负面念头的方法很像，要把注意力安住在情绪本身，而不是安住在对境上
+  - 就这样看着情绪，不要用头脑去分析，不要紧抓着这个情绪，也不要阻挡它，只要观看着它即可
+  - 每一种烦恼都是智慧的基础，倘若我们深陷烦恼之中，或者试图压抑这些烦恼，最后就会作茧自缚，为自己制造更多问题。如果能够反过来看着这些烦恼，那么，那些我们深恐会伤害自己的事物，就会逐渐转化为我们所能期待的最有力的禅修助缘
+    - eg. 孔雀会吃一种有毒的植物，利用其中的毒素增进羽毛的光彩艳丽
+- “慈心” 和 “悲心” 有点像是语言上的一种“暂停标志”​，它能使我们停顿一下，想一想自己跟他人的关系
+  - “慈心” 即是祈愿一切有情众生——包含我们不喜欢的众生在内——都能体验到我们自己所渴望的喜乐和自由
+  - 悲心的基本意义即是 “同理心”​，也就是 “感同身受”​，只要是会让你伤心难过的，我也会感到伤心难过，而任何对你有帮助的，也会对我有帮助
+  - “对他人生起悲心” 的次第修习之道，共分为三个阶段，而且就像学生在学基础数学一样，每一阶段都得练习好几个月之后，才能进行更高阶的练习。第一阶段要练习的是，对自己和亲近的人生起慈心或悲心；第二阶段则专注在对所有众生生起无量的慈心和悲心；第三阶段则要培养所谓的 “菩提心“
+
+- 不管你选择什么方法，重要的是，每一次禅修之中都要交替练习 “有所缘禅修”​，以及直接安住自心的 “无所缘禅修”​
