--- a/世界上最快乐的人.md
+++ b/世界上最快乐的人.md
@@ -100,3 +100,64 @@
   - “对他人生起悲心” 的次第修习之道，共分为三个阶段，而且就像学生在学基础数学一样，每一阶段都得练习好几个月之后，才能进行更高阶的练习。第一阶段要练习的是，对自己和亲近的人生起慈心或悲心；第二阶段则专注在对所有众生生起无量的慈心和悲心；第三阶段则要培养所谓的 “菩提心“
 
 - 不管你选择什么方法，重要的是，每一次禅修之中都要交替练习 “有所缘禅修”​，以及直接安住自心的 “无所缘禅修”​
+- 虽然一天当中随时都可以进行正式禅修，但是根据我所学的，正式禅修的最好时间是在经过一夜好眠，尚未进行任何日常活动的清晨时刻，这时候我们的心最清新，也最放松
+- 尤其是在初学时，尽可能投入时间做禅修，同时又不过分紧绷，这点是绝对重要的
+  - 最好的禅修原则是，禅修时间要比你自认为自己能力所及的时间再短一点
+  - 以这样的方式练习的话，你就会发现自己热切期待下一次禅修的到来，与其让自己觉得自己达到某种目标，还不如让自己感到意犹未尽来得好
+- 修持快结束时，你大概可以用30秒做 “功德回向”​
+  - 以此功德愿众生
+    圆满福德与智慧
+    以此福德智慧故
+    愿能证得二妙身
+  - 其实也可以说是一种祈愿，也就是祈愿将修持所获得的任何心智力量或情绪力量都奉献给他人
+  - 译音：
+    - 给瓦帝依皆沃坤(Gewa di yee che wo kun) 
+      索南耶谢措作内(Sönam ye shay tsok dsok nay)
+      索南耶谢雷炯位(Sönam ye shay lay jung wa)
+      当巴姑尼托巴秀(Tampa ku nyee top par shok)
+  - 不管祈愿是什么，都不要产生自己与他人（众生）分离的感觉，也不要强化自我和他人之间的差异感，这会对你修持后所生起的悲心、信心和安全感逐渐造成损害
+  - 功德回向也是为了让自己形成刻意思维 —— “每个人其实都渴望一切有情众生之间充满平静和满足”​
+
+- 佛陀对人类最大的贡献之一，就是教导我们可以随时随地进行禅修
+  - 佛法修持的主要目标之一，就是要将禅修运用到日常生活中，任何日常活动都可以是禅修的机会
+  - 佛陀教法的重点在于，要我们将正式禅修的体验，应用在日常生活中的每一层面
+  - 因为只有在面对日常生活的种种挑战时，才能真正测出我们内在的平静、洞察力与慈悲的进展
+
+- 记下所有非正式禅修的次数，以便和你所设定的目标作对照
+  - 只要你记得自己有禅修的意图，那就是禅修
+  - 修持其实就像老牛撒尿一般，是很容易、很必要，也很能放松自己
+  - 当你习惯一天 25 次短时间禅修之后，就可以开始把目标提升为 50 次，然后逐渐增加到 100 次。重要的是，要订一个计划，如果没有订出任何计划，你就会完全忘了修持这档事
+  - 非正式禅修最大的益处，就是让我们学会如何面对这些无所不在的干扰
+
+- 把注意力放在正在做的事情上，比如说走路、吃饭、开车、说话等生活或者工作中的一切活动，这样心中的疯猴子（意识）就会平静下来，烦乱和焦虑就会随之消失
+
+## 快乐的心健康的身
+
+- 当你以禅修来安住自心时，奇妙的体验就可能会发生，最常见的体验就是 **喜乐**、**清明** 和 **超越念想**
+  - **喜乐**：身心两方面的纯然快乐、舒适和轻安，当这种体验增强时，你所见到的一切就好像都是由 “爱” 所产生，即使肉体的疼痛也都会变得很轻微，甚至几乎完全感受不到
+  - **清明**：能够洞见事物本质的一种能力，见一切事物时，就好比见到无云晴空下灿烂闪亮的山水景色般，每件事物都很合理地清晰呈现。即使是纷扰的念头和情绪，在这片景色之中也都有其归属的所在
+  - **超越念想**：一种自心完全开阔宽广的体验，你的觉性直接无遮，不被“我”或“他”​、主体和客体，抑或其他形式的限制所遮盖。这是一种清净心识的体验，广大如虚空，无起始，无中间，也无止境。就像虽是在梦境中，却是清醒的，而且也认出梦中所经历的一切与做梦者的心并非分离的
+
+- 当干扰发生的时候，你就要把它们都变成修持的一部分。这时你可以用觉性去察觉这些干扰
+- 当你有沉睡感或睡意是，将眼睛向上凝视可以让心产生清醒的作用。而当你的心感到烦躁时，凝视下方则能产生一种安定的作用
+
+- “瀑布体验” 是人们开始禅修时通常会碰到的第一个体验
+
+- 瀑布 -》河流 -》湖泊
+
+- 在佛教传统中，修行人不太会跟他人谈论自己的体验和了悟，主要是因为这样容易增长我慢，而且也可能导致滥用这些体验，以获取世间权力或用来影响他人，这对自己和他人都会造成伤害
+
+- 当你心中有个微弱却坚定的声音告诉你，现在是专注禅修的好时机，那就千万要把握机会做禅修
+- 要放下任何你可能体验到的喜乐、清明和超越念想的觉受
+  - 如果你试图留住或重演这些体验，最后你就会感到挫折与失望
+  - 就如同任何内心的体验一样，喜乐、清明、超越念想等体验也都是自然地来来去去，并非你所创造的，也不是因为你做了什么才让它们发生，更不受你控制，它们只是自心本然的特质
+  - 每当喜乐、清明或其他美好的体验发生时，我就会马上停止禅修。出乎意料之外，这些体验竟然比我试图抓住它们时更加持久。我也发现，下一次的禅修时间快到时，我已经迫不及待地想要禅修了
+  - 紧抓或坚守着美好体验不放，真正是禅修的一大危机，因为我们很容易就会将这些美好的体验误以为是开悟的征兆
+  - 倘若一路上你都能把握机会随时安住一会儿，那么最后你将会领悟到，你想要到达的地方其实就是你当下所在之处
+
+- 我所学到关于念头和感知作用的生理性过程，表明了若想要从痛苦的桎梏中解脱，唯一的方法就是以苦的形成原因来化解苦的囚禁
+  - 只要一天没有认证原本就存于自心的宁静，我们也就绝对无法从外在对象或活动中找到永恒的满足
+
+- 悲心的禅修不仅是要试着对那些恼怒我们、挫败我们的人生起温馨亲切感或仁慈的心。事实上，我们还得分析、研究一下对方的动机，更进一步试着了解对方的感受，明白每个人都有相同的需求，就像我们自己一样，都想获得快乐并避免受苦
+
+- 培养悲心的另一个大利益是，由于能够体会他人的需求、恐惧和欲望等，你于是能发展出更大的能力来了解自己，了解自己所憧憬的、想要回避的，并且体会自身本性的真谛，如此便能转而消除你可能感受的任何寂寞感或自卑感
