[ZJ] Everything is changing

--- a/正见.md
+++ b/正见.md
@@ -1,1 +1,15 @@
 ## 造作与无常
+
+- 所有事物、整个世界、整个宇宙都是如此，一切事物都是相互依存的，因此一切事物都会改变
+- 没有全能的力量能够扭转死亡之路，因此也就不会困在期待之中。如果没有盲目的期待，就不会有失望。如果能了解一切都是无常，就不会攀缘执着；如果不攀缘执着，就不会患得患失，也才能真正完完全全地活着
+- 你生起慈悲心的原因之一，是由于无常纵然如此明显，人们却视而不见
+- 我们借着不断地觉察和合的现象，便会了知因缘相依。认识因缘相依，我们就会认识无常。而当我们知道一切事物皆无常，才不会被种种假设、僵化的信条（不论宗教的或世俗的）​、价值体系和盲目信仰所奴役
+- 死亡从生、从创造的那一刻开始，就没有停过。每一个变化，都是死亡的一种形式，因此每一个生都包含了另一个事物的死亡
+- 当我们学会了解每一件事物及状况的各个和合部分，我们就能学习培养宽容、谅解、开放与无畏
+- 恐惧和焦虑是人类心智中主要的心理状态。恐惧的背后是对确定性不断的渴求。我们对未知感到恐惧。人心对肯定的渴望，是根植于我们对无常的恐惧
+
+- 我们能认清因缘的不稳定，就会了解自己有力量转化障碍，并且完成不可能的任务
+
+## 情绪和痛苦
+
+
