--- a/正见.md
+++ b/正见.md
@@ -12,4 +12,9 @@
 
 ## 情绪和痛苦
 
+- 事实上，情绪即是痛苦。无论如何，直接或间接的，一切情绪都生起于自私，也就是说，它们都与执着于自我有关
+  - 情绪虽然看似真实，但不是一个人本具存在的一部分
+  - 当某些特定的因与缘聚合在一起的时候，情绪就会生起，陷入这些情绪的当下，我们就失去了觉知和清明
+  - 基本上，所有的情绪都是一种偏见，在每一种情绪之中，都存有分别心的成分
+  - 如果你认真地想要根除痛苦，你必须培养觉知，留心你的情绪，并且学习如何避免被鼓动起来
 
