[ZJ] Beyond the concept

--- a/正见.md
+++ b/正见.md
@@ -22,4 +22,13 @@
 
 ## 涅槃超越概念
 
+- 对悉达多而言，究竟的安歇之所，不论是天堂或涅槃，根本就不是一个地方——而是从无明的困惑中解脱出来
+- 当你完全了悟这一切都只是你所创造的，而不只是智识上的了解时，你就自由了
+- 本初无染污、自己清净的本性，常被称为佛性
+- 悉达多就教导了这四个步骤，就是大家熟知的四圣谛：**了知苦，抛弃苦之因，修息苦之道，了知苦可灭**
+- 经由解构自我，痛苦可以从根断除，因为如果没有自我，就没有痛苦
+- 如果能不被赞誉所收买，不被批评所打击，我们就会有无比的力量
+- 在生活中体认幽默，能避免痛苦、
+- 如果你仍然界定自己是一位佛教徒，那么你就还未成佛
+
 
