--- a/正见.md
+++ b/正见.md
@@ -31,4 +31,8 @@
 - 在生活中体认幽默，能避免痛苦、
 - 如果你仍然界定自己是一位佛教徒，那么你就还未成佛
 
+## 结论
 
+- 见地，是任何宗教的核心
+- 佛教的一切方法都可以用四法印来解释——**一切和合现象皆无常、一切情绪皆苦、一切事物无自性，以及涅槃超越概念**。佛教经典所提倡的每一言行，都是基于前面所讨论过的这四个见地或四个真谛
+- 最好的崇拜方式，就是单纯地忆起无常的原理、情绪的痛苦、现象无自性，以及涅槃超越概念
