[Candle] Candle basic

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -4,3 +4,6 @@
 
 - 证券投资专家伯纳德·巴鲁克曾经谈到过的那样：**市场波动之中最重要的因素并不是事件本身，而是人们对于事件的反应**
 - 投资中交易下单的时机取决于对交易风险与回报程度的权衡
+- 蜡烛图可以和其他技术分析结果综合在一起来做判断，这样准确率更高
+
+### 蜡烛图构成
