[Candle] The components of candle

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -7,3 +7,15 @@
 - 蜡烛图可以和其他技术分析结果综合在一起来做判断，这样准确率更高
 
 ### 蜡烛图构成
+
+- **实体**：蜡烛图中的矩形部分，代表开盘价和收盘价之间的距离
+  - 白色实体（阳线）告诉我们收盘价（顶部）高于开盘价（底部）
+  - 黑色实体（阴线）告诉我们收盘价（底部）低于开盘价（顶部）
+- 在实体的头尾部位引申而绘制出来的垂直线段，就是 **上影线** 和 **下影线**
+  - 在这根蜡烛线的最高点处收盘时，它就没有了上影线——**光头大阳线**
+  - 在这根蜡烛线的最低点处收盘时，它就没有了下影线——**光脚大阴线**
+
+![](/assets/candle/component_of_candle.png)
+
+- 每个交易日开盘和收盘时刻的第一个小时，承载着为整日交易行情奠定基调的功能
+
