[Candle] Strategies of market

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -19,3 +19,11 @@
 
 - 每个交易日开盘和收盘时刻的第一个小时，承载着为整日交易行情奠定基调的功能
 
+### 基本市场策略
+
+- 通过反转信号，价格掉头逆转的概率增加了但并不是一定走向它的反面
+- **极性转换原则**：过去的阻力线转化成新的支撑线，过去的支撑线转化成新的阻力线
+
+![](/assets/candle/support_and_press_line.png)
+
+- 价格在盘中运动一度突破支撑线或者阻力线，其重要性与收盘时刻击穿支撑线和阻力线相比堪称小巫见大巫
