[Candle] Single canle graph

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -27,3 +27,28 @@
 ![](/assets/candle/support_and_press_line.png)
 
 - 价格在盘中运动一度突破支撑线或者阻力线，其重要性与收盘时刻击穿支撑线和阻力线相比堪称小巫见大巫
+
+## 单根蜡烛线图
+
+### 纺锤线和风高浪大线
+
+- 对于一个小实体来说，它的颜色并不重要。真正重要的是矮小实体发出的警告信号，而不是颜色
+  - 当蜡烛图的实体长度逐渐收缩时（不论颜色），这是之前的趋势正在失去动力的一个强烈暗示
+
+- **纺锤线**：身材矮小的实体
+- **风高浪大线**：不仅要具备矮小的实体，而且还有长长的上影线和下影线
+
+![](/assets/candle/single_line_1.png)
+
+- 如果说纺锤线是牛方和熊方陷人优柔寡断状态的代名词，那么风高浪大线意味着市场已经变得彻底骚乱
+- 上升（下降）途中蜡烛图所表现出来的形状，是对这段上涨（下降）的稳定性和持久性进行评估和判断的重要线索
+  - 如果市场在上攻的道路上出现了较小的实体(无论黑色或白色)，对多头们而言，这将是个明显的警告信号
+- 纺锤线和风高浪大线在横盘的市场格局之内，对于您的交易决策并没有提示作用
+- 纺锤线是构成另外三种蜡烛图形态的要素。这三种形态分别是：锤子线、上吊线、流星线
+
+![](/assets/candle/single_line_2.png)
+
+- 锤子线和上吊线首先拥有较小的实体，而这些实体位于或接近整个蜡烛线的高点，**他们具备很长的下影线**
+  - 低处时（锤子线）应该买人，高处时（上吊线）应该卖出
+- 流星线是一个顶部反转形态，类似于上吊线
+- 任何蜡烛图形态上的长长上影线，都预示着卖出的巨大压力
