[Candle] Single candle - cross

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -52,3 +52,20 @@
   - 低处时（锤子线）应该买人，高处时（上吊线）应该卖出
 - 流星线是一个顶部反转形态，类似于上吊线
 - 任何蜡烛图形态上的长长上影线，都预示着卖出的巨大压力
+
+### 危险的十字线
+
+- 十字线是某个交易时段之内开盘价和收盘价都相同时形成的，暗示市场的供给与需求近乎完全平衡
+- 当十字线出现在一个向上的趋势之中时，特别是出现在一个前期的阻力线区域时，它可能代表一种重要的趋势变化或反转信号
+  - 在十字线之后出现的蜡烛线，其作用是对趋势的转变提供一个有效确认
+  - 十字线正是不确定性的同义词
+- 当十字线出现在一个下降的趋势之中可能并不一定暗示着市场底部已经到来
+  - 十字线意味着市场犹豫不决。在一个陷入超卖的市场，犹豫不决和不确定性极有可能成为另一波暴跌重新燃起之前的休憩之地
+- 当十字线在图表之中出现的频率越小时,它更加具有重要影响力
+
+![](/assets/candle/single_line_cross.png)
+
+- **蜻蜓十字线** 表达出乐观的看涨预期，类似锤子线。当您看到蜻蜓十字线出现在大量抛售陷人超卖的一段下跌之后时，需要多加关注
+- **墓碑十字线** 是一个重要的顶部反转信号
+
+- 一根十字线的出现可能并不预言市场马上出现反转。它仅仅表明市场已经变得非常脆弱，变盘的敏感性显得非常之高
