[Candle] Longer candle

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -69,3 +69,21 @@
 - **墓碑十字线** 是一个重要的顶部反转信号
 
 - 一根十字线的出现可能并不预言市场马上出现反转。它仅仅表明市场已经变得非常脆弱，变盘的敏感性显得非常之高
+
+### 长实体蜡烛线：善讲故事者
+
+- 小的蜡烛线预示着市场参与者已经陷人犹豫不决，当它们出现在支撑线和阻力线附近位置时，会更显得举足轻重
+- **捉腰带线**：较长实体的蜡烛线
+
+![](/assets/candle/single_line_longer.png)
+
+- 通常而言，捉腰带蜡烛线的长度越长，其传递的技术含义就越显重大
+- **交易量放大是某种证券上涨或下跌的根本推动力，并且它可以用来作为对某种趋势的确认**
+  - 交易量潜在反映着交易者的信心
+
+- 当我们谈到影线时，我们把蜡烛线之间的低点连成支撑线，或者将蜡烛线之间的高点连成阻力线——可以在画出和条形图上相同的趋势线。此时，上影线的顶端和下影线的底端被用来作为趋势线
+
+- 人们进行技术分析时，既要考虑到实体，又要关注到上影线和下影线，不可失之偏颇：
+  - 长长的下影线：市场拒绝维持更低的价格，冲淡了市场的看跌的味道
+  - 长长的上影线：市场拒绝维持更高的价格，会抵消一部分看涨的势头
+- 应当密切关注该股票底部运动的情况，并在它带量突破阻力位时果断做多
