[Candle] Multiple candles - ch1

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -91,3 +91,31 @@
 ## 蜡烛线组合的威力
 
 ### 近亲：刺透、乌云盖顶、吞没以及反击线
+
+- 典型的情况是，一个由两根蜡烛线构成的蜡烛图形态，先由第一根蜡烛线表达市场正在见顶或者触底；然后由第二根蜡烛线对看涨或看跌加以确认
+- 一个由三根蜡烛线构成的蜡烛图形态，先是第一根蜡烛线显示之前的趋势正在继续；而后由第二根蜡烛线表达见顶或者触底；最后，用第三根蜡烛线来确认反转信号的真实性
+
+![](/assets/candle/multiple_lines_longer.png)
+
+- **看涨刺透形态**：理想的情况要求白色实体向上穿人黑色实体的二分之一以上，这根白色实体将这段下跌趋势 “刺透”，市场呈现牛方压倒熊方的格局
+  - 下跌的趋势中股票越超卖
+- **乌云盖顶**：顶部反转形态，理想的情况要求，第二根黑色实体应该向下穿人第一根白色实体的中点以下
+  - 上涨的趋势中股票超买
+
+- 这些形态在压力线（支撑线），伴随巨大交易量时，效果最明显
+
+- 吞没形态：
+
+![](/assets/candle/multiple_lines_longer_2.png)
+
+- **看涨吞没形态**：一根白色蜡烛线的实体把前一根蜡烛线的实体 “抱进了怀里”，这显示市场上的买进力量已经压倒了卖出的力量
+  - 根据此形态做多的投资者，应当在低于该形态最低价的位置附近设定止损点
+- **看跌吞没形态**：一根蜡烛线的白色实体被另一根蜡烛线的黑色实体吞吃，预示市场顶部反转就在眼前
+
+- 反击线形态：
+
+![](/assets/candle/multiple_lines_longer_3.png)
+
+- 当两根颜色相反的蜡烛线具有相同的收盘价时，就形成了一个反击线形态
+- 反击线形态类似于刺透形态，但是威力不如刺透形态。即便如此，这种形态还是可以给予明确的趋势转变的信号，具体如何还需后面的确认
+  - 若第二天的开盘价较前一天跳空高开得越远，则看跌反击线传达的反转信号愈加强烈
