[Candle] Multiple candles - ch2

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -119,3 +119,5 @@
 - 当两根颜色相反的蜡烛线具有相同的收盘价时，就形成了一个反击线形态
 - 反击线形态类似于刺透形态，但是威力不如刺透形态。即便如此，这种形态还是可以给予明确的趋势转变的信号，具体如何还需后面的确认
   - 若第二天的开盘价较前一天跳空高开得越远，则看跌反击线传达的反转信号愈加强烈
+
+### 孕线与十字孕线，启明星与黄昏星
