[Candle] Ch2 - multiple lines (3)

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -121,3 +121,21 @@
   - 若第二天的开盘价较前一天跳空高开得越远，则看跌反击线传达的反转信号愈加强烈
 
 ### 孕线与十字孕线，启明星与黄昏星
+
+- 孕线是一种反转形态
+- 孕线形态之中实体的颜色无关紧要：它们可以相反或相同
+
+![](/assets/candle/multiple_lines_longer_ch2.png)
+
+- 如果第二个实体是一个十字形态而不是纺锤形态的话，它便被称为十字孕线
+
+![](/assets/candle/multiple_lines_longer_ch2_2.png)
+
+- 星线是一个小实体蜡烛线(您可以想想纺锤线的样子)，并且在上升或者下降趋势之中和它之前那根蜡烛线的实体之间存在价格跳空缺口
+  - 第三根蜡烛线也应该与星线之间有一个跳空，使得星线中的那根小实体孤零零地伫立在一段上升或下跌趋势的末端
+  - 理想的状况是，实体之间不应当相互重叠，尽管星线的实体很有可能会扎人到它之前那根蜡烛线的影线之中
+
+![](/assets/candle/multiple_lines_longer_ch2_3.png)
+
+- 交易量信息的融人将更好地帮助您分析星线形态的威力
+  - 例如，第一根蜡烛线伴随的成交量微弱，第三根蜡烛线伴随着成交量的急速放大
