[Candle] Ch2 - multiple lines (3)

--- a/日本蜡烛图教程.md
+++ b/日本蜡烛图教程.md
@@ -133,6 +133,7 @@
 
 - 星线是一个小实体蜡烛线(您可以想想纺锤线的样子)，并且在上升或者下降趋势之中和它之前那根蜡烛线的实体之间存在价格跳空缺口
   - 第三根蜡烛线也应该与星线之间有一个跳空，使得星线中的那根小实体孤零零地伫立在一段上升或下跌趋势的末端
+  - 第三根蜡烛线必须穿入第一根蜡烛线实体的内部，完成整个形态
   - 理想的状况是，实体之间不应当相互重叠，尽管星线的实体很有可能会扎人到它之前那根蜡烛线的影线之中
 
 ![](/assets/candle/multiple_lines_longer_ch2_3.png)
